--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,15 @@
 [tool.poetry]
-name = "leaving-academia"
+name = "leaving-academia-for-tech"
 version = "0.1.0"
 description = ""
 authors = ["willie"]
+readme = "README.md"
+packages = [{include = "leaving_academia_for_tech"}]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-google-search-results = "^2.4.1"
-jupyter = "^1.0.0"
-PyYAML = "^6.0"
-pandas = "^1.5.0"
-nltk = "^3.7"
-plotly = "^5.10.0"
-chart-studio = "^1.1.0"
-kaleido = "0.2.1"
+python = "^3.10"
 
-[tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
